k8s/geocache-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geocache-frontend
  labels:
    app: kustomize
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kustomize
  template:
    metadata:
      labels:
        app: kustomize
    spec:
      containers:
        - name: geocache-frontend
          # image: registry.dev.clarkezone.dev/geocache:latest
          image: registry.hub.docker.com/clarkezone/geocache:0.0.3
          imagePullPolicy: Always
          args: ["geoserverweb"]
          ports:
            - containerPort: 8090
