k8s/geocache-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-service
spec:
  selector:
    app: pocketgeo-pg
  ports:
    - name: "http"
      port: 8080
